@@ -1,0 +1,5 @@
+sharesdir = $(scriptsdir)/Init
+
+shares_SCRIPTS = \
+	Services.pm	\
+	ServicesList.pm
