@@ -1,0 +1,5 @@
+sharesdir = $(scriptsdir)/Network
+
+shares_SCRIPTS = \
+	Hosts.pm	\
+	Ifaces.pm
